--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
